Version 2.7 (X X, 2016) - ""
------------------------------------------------------------------------------

*** ROM SUPPORT *** Thanks to Inkochnito
Lethal Weapon 2.03



Version 2.6 (December 24, 2015) - "The team awakens"
------------------------------------------------------------------------------
Three and a half years have gone by since the last release.
We kept everybody happy by putting out beta versions now and then,
but now we felt the time was right to issue a new version.

This time, Visual PinMAME will also be bundled with the new VP10 in one installer package
in order to reduce the amount of inherent knowledge needed to create a working playable setup.

Have fun, and Merry Christmas everyone! :)

*** CORE/CPU ***
Set DCS sample rate to 31,250 Hz, fixes most DCS sound issues
Optimization to DCS sound decoding for 1993-era games (STTNG, IJ, JD)
(Optional) Separate RGB-Color selection for the 4 DMD shades
Added driver for MAC / CICPlay games
Correct display outputs on IDSA
Slight digits correction for Papillon
Different display handling for Tecnoplay "Space Team"
Added Y8950 sound for Tecnoplay games and Astrocade sound for Midway's Rotation VIII
Corrected Atari gen.1 & gen.2 sound (so make sure you have the 82s130.bin in the ROM set)
Fixed display width for Black Belt (Squawk and Talk)
Some fixes for Midnight Marauders
Corrected CPU clock, RIOT speed, displays for GTS80B
Corrected GTS80 SS sound clock
Cured scratchy GTS80 sound after reset
Corrected DMD for Strikes n' Spares
Added new chirp table & reverb for TMS5200 (Bally Centaur, etc) (so make sure to delete an existing nvram of centaur)
Made some Inder games sound a lot nicer then before, adjusted music / speech pitch for Metal Man
Tweak CPU clock for Mystery Castle to make it look more correct
Fixed single zero digit on Odin & Odin Deluxe
Tweak IRQ4 frequency for Kingpin & Flipper Football (slightly improves lamp issues)
Improve Solenoids on Playmatic games